# CUDA_Advanced_Libraries_Project

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run.sh
results/: execution_times.csv
src/: edge_detection.py  sobel_kernel.cu
